1.mouseup/mousedown on the mask has been handled correctly. 2. now the side nav bar has a good performance. 3. if no throttle, almost 100 mouseover events will happen during one second. I set the gap to 20 which make it work well.

--- a/testVue.css
+++ b/testVue.css
@@ -1515,7 +1515,6 @@ padding:10px 20px;
     height:50px;
 }
 .content-left-video{
-    position:left;
     height:140px;
     overflow:hidden;
 }
